5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1593_1806.log
== SUBMITION (2019-03-28 19:34:20) 
-- CODE:
from math import*

a = int(input("numero de pessoas: "))

p = 1 - ((factorial(365))/factorial(365-a))*(1/(365**a))

print(float(round(p , 4)))
-- EXECUTION TIME:
0.219117
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.167
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.5383
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:22) 
-- CODE:
from math import*

a = int(input("numero de pessoas: "))

p = 1 - ((factorial(365))/factorial(365-a))*(1/(365**a))

print(float(round(p , 4)))
-- OUTPUT:
0.167
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:34:54) 
-- CODE:
from math import*

a = int(input("numero de pessoas: "))

p = 1 - ((factorial(365))/factorial(365-a))*(1/(365**a))

print(float(round(p , 2)))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:35:47) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = 1 - ((factorial(365))/factorial(365-a))*(1/(365**a))

print(round(p , 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:36:13) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/factorial(365-a))*(1/(365**a)))

print(round(p , 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:36:18) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/factorial(365-a))*(1/(365**a)))

print(round(p , 4))
-- OUTPUT:
0.167
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:37:27) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/(factorial(365-a))*(1/(365**a)))

print(round(p , 4))
-- ERROR:
File "XXXX", line 7
    print(round(p , 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:37:45) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/(factorial(365-a))*(1/(365**a)))

print(round(p , 2))
-- ERROR:
File "XXXX", line 7
    print(round(p , 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:37:47) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/(factorial(365-a))*(1/(365**a)))

print(round(p , 2))
-- ERROR:
File "XXXX", line 7
    print(round(p , 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:38:03) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/(factorial(365-a))*(1/(365**a)))

print(round(p , 2)))
-- ERROR:
File "XXXX", line 7
    print(round(p , 2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:38:30) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1 - ((factorial(365))/(factorial(365-a))*(1/(365**a)))

print((float(round(p , 4)))
-- ERROR:
File "XXXX", line 7
    print((float(round(p , 4)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:39:17) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a))*(1/(365**a)))

print((float(round(p , 4)))
-- ERROR:
File "XXXX", line 7
    print((float(round(p , 4)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:39:42) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

print((float(round(p , 4)))
-- ERROR:
File "XXXX", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:39:47) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

print(float(round(p , 4)))
-- OUTPUT:
0.167
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:42:23) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

pq = p * 100

print(float(round(pq , 4)))
-- OUTPUT:
16.7025
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:42:37) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

pq = p * 10

print(float(round(pq , 4)))
-- OUTPUT:
1.6702
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:42:56) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

pq = p * 100

print(float(round(pq , 4)))
-- OUTPUT:
16.7025
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 19:43:13) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

pq = p * 100

print(float(round(pq , 2)))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 19:43:24) 
-- CODE:
from math import*

a = float(input("numero de pessoas: "))

p = (1) - (((factorial(365))/(factorial(365-a)))*(1/(365**a)))

pq = p * 100

print(float(round(pq , 2)))
-- EXECUTION TIME:
0.13802
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
